--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/logo-min.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rethink Academy - Certificates</title>
     <script type="module" crossorigin src="/assets/index.f10e810c.js"></script>
